Fix vertical alignment of buttons

--- a/app/assets/stylesheets/genres.scss
+++ b/app/assets/stylesheets/genres.scss
@@ -4,8 +4,8 @@
 
 .carousel-control {
   position: relative;
-  top: 50%;
-  transform: translateY(-50%);
+  top: 48%;
+  transform: translateY(-52%);
   color: white;
   background: none;
   border: none;
